# fable-pyculator

./: CHANGE_LOG.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: index.rst
docs/guides/: 2020-notebook-workflow.rst  artifacts.rst  freshforge-provider-integration.rst  generated-model-artifacts.rst  notebook-control-surface.rst  release-deployment.rst  validation-scope.rst  workbook-structure.rst
docs/reference/: api.rst
examples/fable_2021/: README.md  generated_fable_2021_model.py.xz
examples/freshforge/: fable_2021_notebook_workflow.yaml
examples/notebooks/: README.md  fable-pyculator-2020-loop.ipynb  fable-pyculator-2021-freshforge-build-plan.ipynb  fable-pyculator-2021-freshforge-run.ipynb  fable-pyculator-2021-loop.ipynb
planning/: phase-1-selection-control-validation.md  phase-1-user-guide-validation-closeout.md  phase-4-scenario-definition-table-discovery.md  phase-5-scenario-definition-input-semantics.md  phase-8-2021-validation-summary.md
scripts/: bootstrap_dev_env.sh  check_release_artifacts.sh
src/fable_pyculator/: __init__.py  controls.py  discovery.py  freshforge.py  notebook.py  spec.py  surface.py  workflows.py
tests/: test_constants.py  test_discovery.py  test_examples.py  test_fable_workbook_scenario_definition_tables.py  test_fable_workbook_selection_controls.py  test_freshforge_integration.py  test_notebook.py  test_scripts.py  test_surface.py  test_workflows.py
