[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "fable-pyculator"
version = "0.1.0a1"
description = "FABLE Calculator-specific notebook controls for Modelwright-generated Python models."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "UBC FRESH Lab" }
]
keywords = [
  "fable",
  "spreadsheet-models",
  "jupyter",
  "modelwright",
  "scenario-analysis"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "modelwright[notebook]>=0.1.0a6",
  "openpyxl>=3.1",
  "pandas>=2"
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "ruff>=0.8",
  "sphinx>=7",
  "sphinx-rtd-theme>=2",
  "twine>=5"
]
docs = [
  "sphinx>=7",
  "sphinx-rtd-theme>=2"
]
notebook = [
  "ipykernel>=6",
  "ipywidgets>=8",
  "matplotlib>=3.8"
]
quality = [
  "ruff>=0.8"
]
release = [
  "build>=1.2",
  "twine>=5"
]
test = [
  "pytest>=8"
]

[project.urls]
Homepage = "https://github.com/UBC-FRESH/fable-pyculator"
Documentation = "https://ubc-fresh.github.io/fable-pyculator/"
Repository = "https://github.com/UBC-FRESH/fable-pyculator"
Issues = "https://github.com/UBC-FRESH/fable-pyculator/issues"
Changelog = "https://github.com/UBC-FRESH/fable-pyculator/blob/main/CHANGE_LOG.md"

[project.entry-points."freshforge.providers"]
fable_pyculator = "fable_pyculator.freshforge:provider_factory"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "workbook: tests that require local FABLE workbook artifacts and are skipped unless explicitly enabled"
]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["tmp"]
